style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,600;0,900;1,100;1,200&display=swap');

body, button {font-family: 'Poppins', sans-serif}



* {padding: 0;
margin: 0;
box-sizing: border-box;}

.fullContainer{
    width: 100%;
}
.container {
    margin: auto;
    width: 1140px;
}


 /*
body{
    justify-content: center;
    font-family: Roboto sans-serif;
    overflow-x: hidden;
}

.header 
{display: flex;
justify-content: space-between;
background-color: #e5e7eb;
border-bottom: 10px solid #1f6521;
position: sticky;
z-index: 999;
top: 0;
width: 100%;}

.logoContainer {display: flex;}

.header2{background-color:#1f2205;
display: flex;
justify-content: center;
padding-bottom: 170px;}

ul
{display: flex;
gap:30px;
list-style: none;
padding: 28px 0px 0px 0px;
margin: 10px 0px 0px 0px;
font-size: 20px;}

a {
text-decoration: none;
color:#1f2205;}

.name {padding: 32px 0px 0px 0px;
margin: 10px 0px 0px -10px;}

.logo{
    padding: 30px;
    display: flex;

    align-items: center;
    color: #f9faf8;
    text-align: center;
}
.logo img {
    max-width: 100px;
}
.img {display: flex;
flex: 1;
flex-wrap: nowrap;}


.links {padding: 30px;}

.Info{display: flex;
padding: 30px;
gap:100px;
padding-left: 50px;
padding-top: 50px;
}

.Info2{display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
gap:10px;
flex-wrap: wrap;
flex: 1;
padding-left: 50px;}

 h1{font-size: 48px;
font-weight:bolder;
color: #1f2205;}

.heading h1 , .heading2 h1{
    color: #e5e7eb;}

.text {font-size: 23px;
color: #e5e7eb;
padding: 20px;
text-shadow: 2px 1px black;}

p {text-align: center;}

.button a{ color:#e5e7eb}

button{border-radius: 1px;
background-color: #53900f;
padding: 14px 28px;
font-size: 19px;
color: #e5e7eb;
text-shadow: 1px 1px white;}

img {display: flex;
flex:1;
max-width :100% ;
height: auto;
border-radius: 12px;}

.ourWork {display: flex;
flex-direction: column;
align-items: center;
margin:50px 15px 0px 15px;
padding: 5px;
gap: 30px;}

.text3 h1{
    color:#1F2937;
    font-size: 36px;
    margin-bottom: 30px;
}

.imgCards{
    display: flex;
    justify-content: center;
gap:20px;
}
.imgCard {
    display: flex;
    flex-direction: column;
}
.caption {
    text-align: center;
}
.image1{
    display: flex;
    flex-direction: column;
    border-color:#1f6521;

}
.funFact{background-color: #e5e7eb;
    display: flex;
justify-content: center;
margin-top: 20px;
font-size: 28px;
font-style: italic;
flex-wrap: wrap;
align-items: center;
padding: 20px;
margin-bottom: 20px;
}

.footerContainer{
    display: flex;
    justify-content: center;
}
.footer {background-color: #1f2205;
display: flex;
justify-content: center;
gap: 30px;
padding: 10px;
border-radius: 10px;
width: 1000px;
}
.txtContainer {
    display: flex;
    flex-direction: column;
    padding: 30px;
}
 .text6 {font-size: 28px;
color: #f9faf8;
padding-top: px;
text-align: center;}

.button {
color: #f9faf8;
margin-top: 30px
flex-direction: row;
justify-content: center;}

.text7 p {color:#f9faf8;
font-size: 20px;}

.img {display: flex;
flex-direction: column;
align-items: center;
justify-content: center;}

/*dropdown menu 
.links ul li {
    position: relative;}
    
    .links ul .dropdown {
        position: absolute;
        background-color: #e5e7eb;
        gap: 15px;
    }
    .dropdown2{display: none;
        flex-direction: column;
    position: absolute;
        background-color: #e5e7eb;
    }
    
    .links ul li ul.dropdown li a:hover {
        background-color: darkgray; 
    }
    
    .links ul li ul.dropdown {width: 180px;
    border-radius: 0 0 4px 4px;
    display: none;
    padding: 10px;}
    
    .links ul li:hover ul.dropdown {
        display: flex;
        flex-direction: column;
    }
    nav {width: 100%;} 
    .links ul li:hover ul.dropdown2{display: flex;}
    

    /*carousel*/
/*
    .carousel{
        overflow: hidden;
        width: 100vw;
        height: 100vh;
        position: relative;
    ;
        
    }
    
    
    .carousel .img { position: absolute;
        top:0;
        left: 0;
    width: 100%;
    height: 100%;
    background-size: cover;
    opacity: .8;
    
    background-position: center;
        animation: slider 20s infinite;
       }
    .carousel .Slide1{
        background-image: url(Media/Picking%20crops.jpg);
        animation-delay: -0s;}
    .carousel .Slide2{background-image: url(Media/popo%20farmer.jpg);
        animation-delay: -4s;}
    .carousel .Slide3{background-image: url(Media/people%20picking%20rice.jpg);
        animation-delay: -8s;}
    .carousel .Slide4{background-image: url(Media/People%20picking%20ifishimu.jpg);
        animation-delay: -12s;}
    .carousel .Slide5{background-image: url(Media/Picking%20crops.jpg);
        animation-delay: -16s;}
    
    @keyframes slider {
        0%,16%,100% {
            margin-left:0;
            animation-timing-function: ease;
        }
        
        20%{
            margin-left:  -100%;
            animation-timing-function: step-end;
            
        }
        96% {margin-left: 100%;
            animation-timing-function: ease;
            
        }
    }




    .carousel .img .text {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding: 30px;
        font-size: 50px;
        text-align: center;
        color: white;
        max-width: 60%;
    }
    .overlay {
        position: absolute;
        width: 100%;
        height: 100%;
        background-color: rgba(0,0,0,0.5);
        z-index: -1;

    }
    P {box-shadow: 2px;}


@media (max-width:768px){
    .header , .logoContainer, .ourWork, .imgCards,.footer ,.Info{flex-direction: column;
    align-items: center;}

    .logoContainer{flex-direction: column;
    align-items: center;}

    img , .img {max-width: 100%;
    height: auto;}
    
    .name { 
        margin: -15px 0px 0px 0px;
    }
    .heading, .carousel {max-width: 100%;}

    p {padding: 10px;
    width: 100%;
height:fit-content;
font-size: 35px;}

    h1 {text-align: center;}
    .Info {padding: 30px 0px 0px 0px;}
    .Info2{padding-left: 0;
    gap: 20px;}

.links {
 margin-top: -70px;
}

.links ul li {width: 100%;
white-space: nowrap;
gap: 10px;}

.logoContainer .name{display: none;}

.imgCards{;}

    }
    

